tests/paczka1/small_fuzzy/16800873.err
Error in line 5: MtDWIoS980 S406 88,64
Error in line 14: EjRpBV0 A670 91,5
